Works with scala 2.12.10